jmn-pureplus and jmn-connected-beauty and their side-effects

--- a/emacs.org
+++ b/emacs.org
@@ -11,14 +11,27 @@ Hopefully only need to change these to get setup on a new machine.
   (defconst jmn-config-location "~/dotfiles/emacs.org"
     "Location of literate org file used to automaitically tangle to init.el")
 
-  (defconst jmn-gtd-directory "~/Documents/gtd/"
-    "Location of gtd org files: projects, inbox, next,  whip, journal, and habits")
+  (let ((gtd-path '((gnu/linux . "~/Documents/gtd/")
+                   (windows-nt . "c:/Users/nehlsj/OneDrive/Documents/gtd/"))))
+    (defconst jmn-gtd-directory (alist-get system-type gtd-path)
+    "Location of gtd org files: projects, inbox, next,  whip, journal, and habits"))
 
   (defconst jmn-connected-systems '("lat" "dsk" "xps")
     "Systems which should download packages. Others get the 'pure' configuration.")
 
+  (defconst jmn-connected-beauty nil
+    "Flag of weather to use the purely astetic packages or not on connected system")
+
+  (defconst jmn-pureplus-systems '("lat")
+    "Systems which use the pure setup with the plus packages")
+
   (defconst jmn-dark-mode t
     "Do we want Emacs in a dark mode? Note: no dark-mode for windows as of now")
+
+  (defconst jmn-font-height-alist '(("xps" . 110)
+                                    ("dsk" . 110)
+                                    ("lat" . 115))
+    "Set text-hight for each machine-- default will be 100")
 #+end_src
 
 * Setup
@@ -43,15 +56,22 @@ Use-package is macro that is used like a package manager. [[https://github.com/j
 #+begin_src emacs-lisp
   (if (member system-name jmn-connected-systems)
       (defconst jmn-pure nil "Indicating if we are pure or using packages")
-    (defconst jmn-pure t "Indicating if we are pure or using packages"))
+    (if (member system-name jmn-pureplus-systems)
+        (defconst jmn-pure "plus" "Indicating we are using pure config with plus packages")
+      (defconst jmn-pure t "Indicating if we are pure, not using any packages")))
 
   ;; flag
   (defconst jmn-term (not (display-graphic-p (selected-frame)))
     "Indicating if emacs is being run within a terminal or not")
 
   (if jmn-pure
-      (defmacro use-package (&rest _))  ;; define use-package macro to do nothing
-    (progn
+      (progn
+        (defmacro use-package (&rest _))  ;; define use-package macro to do nothing
+        (if (string= jmn-pure "plus") ;; turn on all of the plus modes
+            (progn (require 'prescient)
+                   (dolist (pluslist '(which-key-mode undo-tree-mode ws-butler-mode prescient-persist-mode ivy-mode ivy-rich-mode ivy-prescient-mode counsel-mode))
+                     (funcall pluslist 1)))))
+    (progn  ;; Connect to the internet and use use-package macros to config below
       (require 'package)
       (setq package-archives '(("melpa" . "https://melpa.org/packages/")
                                ("elpa" . "https://elpa.gnu.org/packages/")))
@@ -181,13 +201,14 @@ To ensure scrolling is fast in Emacs, disable  non-essential things while the wi
 *** Modeline
 *NOTE*: The first time you load your configuration on a new machine, you’ll need to run =M-x all-the-icons-install-fonts= so that mode line icons display correctly. (Fixed?)
 #+begin_src emacs-lisp
-  ;;;; Modeline ;;;;
-  (use-package all-the-icons
-    :defer 1
-    :init
-    (when (and (not (member "all-the-icons" (font-family-list))) ;; autoinstall fonts
-               (window-system))
-      (all-the-icons-install-fonts t)))
+    ;;;; Modeline ;;;;
+  (if jmn-connected-beauty
+      (use-package all-the-icons
+        :defer 1
+        :init
+        (when (and (not (member "all-the-icons" (font-family-list))) ;; autoinstall fonts
+                   (window-system))
+          (all-the-icons-install-fonts t))))
 
   (use-package doom-modeline
     :init (doom-modeline-mode 1)
@@ -308,11 +329,6 @@ More to do at [[https://youtu.be/PMWwM8QJAtU][here]]: dired-open
                                          ("\\.pdf\\'" "evince")
                                          ("\\.ipynb\\'" "code"))))
 
-  (use-package all-the-icons-dired
-    :after dired
-    :defer t
-    :hook (dired-mode . all-the-icons-dired-mode))
-
   ;; sluggish mode which lists the recursive size of each folder/item in dired.
   (use-package dired-du
     :commands dired-du-mode
@@ -331,6 +347,12 @@ More to do at [[https://youtu.be/PMWwM8QJAtU][here]]: dired-open
                                     'dired-single-buffer-mouse)
                         (define-key dired-mode-map [remap dired-up-directory]
                                     'dired-single-up-directory))))
+  (if jmn-connected-beauty
+      (use-package all-the-icons-dired
+        :after dired
+        :defer t
+        :hook (dired-mode . all-the-icons-dired-mode)))
+
 #+end_src
 
 ** Proced
@@ -441,10 +463,7 @@ Archive: elpa, melpa
     (interactive "nFont height (default is 100): ")
     (set-face-attribute  'default nil :height value))
 
-  (jmn-set-font-height (alist-get (system-name) '(
-                                                  ("xps" . 110)
-                                                  ("dsk" . 110)
-                                                  ("lat" . 115))
+  (jmn-set-font-height (alist-get (system-name) jmn-font-height-alist
                                   100 nil 'string=)) ;; default is 100
 
   (setq text-scale-mode-step 1.05)
@@ -1085,7 +1104,7 @@ Notes on completion: use =C-c C-l= to insert a path link and get completion.
 ** Bullets
 Archive: melpa
 #+begin_src emacs-lisp
-  (unless jmn-term
+  (unless (or jmn-term (not jmn-connected-beauty))
     (use-package org-bullets
       :hook (org-mode . org-bullets-mode)
       :custom
@@ -1754,7 +1773,7 @@ Recentf is needed for recent files on the dashboard.
   (add-to-list 'recentf-exclude
                (concat (file-name-directory jmn-config-location) "emacs.html"))
 
-  (if jmn-pure
+  (if (or jmn-pure (not jmn-connected-beauty))
       (progn
         ;; display recent files on startup
         ;; (add-hook 'after-init-hook (lambda () (recentf-open-files)))
@@ -1815,33 +1834,34 @@ Dash board for initial startup of emacs. [[https://github.com/emacs-dashboard/em
 - For the icons to display correctly, I needed  to execute =all-of-the-icons-install-fonts=.
 
 #+begin_src emacs-lisp
-  (use-package dashboard
-    :ensure t
-    :init     (dashboard-setup-startup-hook)
-    :bind ( "C-c d" . dashboard-open)
-    :config
-    (setq dashboard-startup-banner 2)  ;; (nil . no-banner)  ([1-5] . plain-text banners)
-    (setq dashboard-center-content 1)
-    (setq dashboard-show-shortcuts 1)  ;; show the single-character shortcuts
-    (setq dashboard-items '((recents  . 5)
-                            (bookmarks . 5)
-                            (projects . 5)
-                            (agenda . 5)
-                            (registers . 5)))
+  (if jmn-connected-beauty
+    (use-package dashboard
+      :ensure t
+      :init     (dashboard-setup-startup-hook)
+      :bind ( "C-c d" . dashboard-open)
+      :config
+      (setq dashboard-startup-banner 2)  ;; (nil . no-banner)  ([1-5] . plain-text banners)
+      (setq dashboard-center-content 1)
+      (setq dashboard-show-shortcuts 1)  ;; show the single-character shortcuts
+      (setq dashboard-items '((recents  . 5)
+                              (bookmarks . 5)
+                              (projects . 5)
+                              (agenda . 5)
+                              (registers . 5)))
 
-    (setcdr (assoc 'projects dashboard-item-shortcuts) "j")
-    (setq dashboard-set-heading-icons t)
-    (setq dashboard-set-file-icons t)
-    (setq dashboard-projects-backend 'project-el)
-    (dashboard-modify-heading-icons '((recents . "file-text")))
-    (setq dashboard-set-footer nil))
+      (setcdr (assoc 'projects dashboard-item-shortcuts) "j")
+      (setq dashboard-set-heading-icons t)
+      (setq dashboard-set-file-icons t)
+      (setq dashboard-projects-backend 'project-el)
+      (dashboard-modify-heading-icons '((recents . "file-text")))
+      (setq dashboard-set-footer nil))
 
-  (defun my-dashboard-hook()
-    "Needed to define these after hook for some reason"
-    (define-key dashboard-mode-map (kbd "n")  'dashboard-next-line)
-    (define-key dashboard-mode-map (kbd "p")  'dashboard-previous-line))
+    (defun my-dashboard-hook()
+      "Needed to define these after hook for some reason"
+      (define-key dashboard-mode-map (kbd "n")  'dashboard-next-line)
+      (define-key dashboard-mode-map (kbd "p")  'dashboard-previous-line))
 
-  (add-hook 'dashboard-mode-hook 'my-dashboard-hook)
+    (add-hook 'dashboard-mode-hook 'my-dashboard-hook))
 #+end_src
 * Localwords                                                       :noexport:
 #  LocalWords:  IDE solarized gruvbox vertico Magit Quickhelp Elpy Elisp Neotree Greduan's Localwords Esc  Smartparens UI Helpful's Yasnippet LSP Modeline Dap Flycheck modeline Treemacs backend lsp vterm eshell  Dired dracula clangd ui Grammarly workspaces commenter Pyright CMake Flyspell Pyvenv treemacs shellcheck Linum Proced Hacky GTD
