jmn-connected extras and add eglot to extras

--- a/emacs.org
+++ b/emacs.org
@@ -19,7 +19,7 @@ Hopefully only need to change these to get setup on a new machine.
   (defconst jmn-connected-systems '("lat" "dsk" "xps")
     "Systems which should download packages. Others get the 'pure' configuration.")
 
-  (defconst jmn-connected-beauty nil
+  (defconst jmn-connected-extras nil
     "Flag of weather to use the purely astetic packages or not on connected system")
 
   (defconst jmn-pureplus-systems '("lat")
@@ -202,7 +202,7 @@ To ensure scrolling is fast in Emacs, disable  non-essential things while the wi
 *NOTE*: The first time you load your configuration on a new machine, you’ll need to run =M-x all-the-icons-install-fonts= so that mode line icons display correctly. (Fixed?)
 #+begin_src emacs-lisp
     ;;;; Modeline ;;;;
-  (if jmn-connected-beauty
+  (if jmn-connected-extras
       (use-package all-the-icons
         :defer 1
         :init
@@ -347,7 +347,7 @@ More to do at [[https://youtu.be/PMWwM8QJAtU][here]]: dired-open
                                     'dired-single-buffer-mouse)
                         (define-key dired-mode-map [remap dired-up-directory]
                                     'dired-single-up-directory))))
-  (if jmn-connected-beauty
+  (if jmn-connected-extras
       (use-package all-the-icons-dired
         :after dired
         :defer t
@@ -664,33 +664,33 @@ Function/keybinding learning area:
    - xrf-find-references "M-?"
 
 #+begin_src emacs-lisp
-  (use-package eglot
-    :defer 1
-    :ensure-system-package
-    ((bash-language-server . "sudo dnf install -y nodejs-bash-language-server")
-     (pyright . "pip install pyright")
-     (clangd . "sudo dnf install -y clang-tools-extra"))
-    :hook ((sh-mode . eglot-ensure)
-           (python-mode . eglot-ensure)
-           (c-mode . eglot-ensure)
-           (c++-mode . eglot-ensure))
-    :config
-    ;; make shorter ones later?
-    ;; use "M-." for xref-find-definitions
-    ;; use "M-?" for xref-find-references
+  (if jmn-connected-extras
+      (use-package eglot
+        :defer 1
+        :ensure-system-package
+        ((bash-language-server . "sudo dnf install -y nodejs-bash-language-server")
+         (pyright . "pip install pyright")
+         (clangd . "sudo dnf install -y clang-tools-extra"))
+        :hook ((sh-mode . eglot-ensure)
+               (python-mode . eglot-ensure)
+               (c-mode . eglot-ensure)
+               (c++-mode . eglot-ensure))
+        :config
+        ;; make shorter ones later?
+        ;; use "M-." for xref-find-definitions
+        ;; use "M-?" for xref-find-references
     ;;; use "M-g n" and "M-g p" to go to next and previous location
-    ;; use ... for xref-pop-marker-stack
-    (define-prefix-command 'eglot-prefix)
-    (global-set-key (kbd "C-x e") 'eglot-prefix)
-    (define-key eglot-prefix (kbd "r") 'eglot-rename)
-    (define-key eglot-prefix (kbd "o") 'eglot-code-action-organize-imports)
-    (define-key eglot-prefix (kbd "h") 'eldoc)
-    (define-key eglot-prefix (kbd "d") 'eglot-find-declaration)
-    (define-key eglot-prefix (kbd "a") 'eglot-format-buffer)
-    (define-key eglot-prefix (kbd "n") 'flymake-goto-next-error)
-    (define-key eglot-prefix (kbd "p") 'flymake-goto-prev-error)
-    (define-key eglot-prefix (kbd "b") 'flymake-show-buffer-diagnostics)
-    )
+        ;; use ... for xref-pop-marker-stack
+        (define-prefix-command 'eglot-prefix)
+        (global-set-key (kbd "C-x e") 'eglot-prefix)
+        (define-key eglot-prefix (kbd "r") 'eglot-rename)
+        (define-key eglot-prefix (kbd "o") 'eglot-code-action-organize-imports)
+        (define-key eglot-prefix (kbd "h") 'eldoc)
+        (define-key eglot-prefix (kbd "d") 'eglot-find-declaration)
+        (define-key eglot-prefix (kbd "a") 'eglot-format-buffer)
+        (define-key eglot-prefix (kbd "n") 'flymake-goto-next-error)
+        (define-key eglot-prefix (kbd "p") 'flymake-goto-prev-error)
+        (define-key eglot-prefix (kbd "b") 'flymake-show-buffer-diagnostics)))
 #+end_src
 
 ** CMake
@@ -1119,7 +1119,7 @@ Notes on completion: use =C-c C-l= to insert a path link and get completion.
 ** Bullets
 Archive: melpa
 #+begin_src emacs-lisp
-  (unless (or jmn-term (not jmn-connected-beauty))
+  (unless (or jmn-term (not jmn-connected-extras))
     (use-package org-bullets
       :hook (org-mode . org-bullets-mode)
       :custom
@@ -1788,7 +1788,7 @@ Recentf is needed for recent files on the dashboard.
   (add-to-list 'recentf-exclude
                (concat (file-name-directory jmn-config-location) "emacs.html"))
 
-  (if (or jmn-pure (not jmn-connected-beauty))
+  (if (or jmn-pure (not jmn-connected-extras))
       (progn
         ;; display recent files on startup
         ;; (add-hook 'after-init-hook (lambda () (recentf-open-files)))
@@ -1849,7 +1849,7 @@ Dash board for initial startup of emacs. [[https://github.com/emacs-dashboard/em
 - For the icons to display correctly, I needed  to execute =all-of-the-icons-install-fonts=.
 
 #+begin_src emacs-lisp
-  (if jmn-connected-beauty
+  (if jmn-connected-extras
     (use-package dashboard
       :ensure t
       :init     (dashboard-setup-startup-hook)
