--- a/emacs.org
+++ b/emacs.org
@@ -727,13 +727,14 @@ Archive: melpa
 ** Yasnippet
 Archive: elpa, melpa
 #+begin_src emacs-lisp
-  (use-package yasnippet
-    :defer 1
-    :config
-    (yas-global-mode 1))
+  (if jmn-connected-extras
+      (use-package yasnippet
+        :defer 1
+        :config
+        (yas-global-mode 1))
 
     (use-package yasnippet-snippets
-      :after yas-minor-mode) ; load basic snippets from melpa
+      :after yas-minor-mode))  ;; load basic snippets from melpa
 #+end_src
 
 ** TODO Flyspell
