--- a/emacs.org
+++ b/emacs.org
@@ -972,8 +972,17 @@ The following keeps the compilation buffer if there are warnings or errors, and 
   Currently lsp-mode works with clangd backend without any initial setup.
   company-clang needs =clang= installed on the system.
   #+begin_src emacs-lisp
+    ;;settings
     (setq-default c-basic-offset 2)
 
+    ;; gdb
+    (with-eval-after-load 'gdb-mi
+      (setq gdb-many-windows t
+            gdb-show-main t))
+
+    (advice-add 'gdb :after (lambda (&rest r) (tool-bar-mode 1)))
+
+    ;; mode
     (defun my-c++-mode-hook-fn ()
       (with-eval-after-load 'devdocs
         (setq-local devdocs-current-docs '("cpp"))))
@@ -1806,7 +1815,7 @@ Recentf is needed for recent files on the dashboard.
       (progn
         (vterm)
         (tab-bar-rename-tab "vterm")))
-
+    (delete-other-windows)
 
     (tab-bar-new-tab)
     (tab-bar-rename-tab "config")
