fix jmn-pure logic in tab

--- a/emacs.org
+++ b/emacs.org
@@ -1858,7 +1858,7 @@ Recentf is needed for recent files on the dashboard.
           (tab-bar-new-tab)
           (tab-bar-rename-tab "config")
           (find-file jmn-config-location)
-          (unless (eq jmn-pure nil)
+          (unless jmn-pure
             (magit-status))
 
           (tab-bar-select-tab 2))))
