--- a/emacs.org
+++ b/emacs.org
@@ -19,7 +19,7 @@ Hopefully only need to change these to get setup on a new machine.
   (defconst jmn-connected-systems '("lat" "dsk" "xps")
     "Systems which should download packages. Others get the 'pure' configuration.")
 
-  (defconst jmn-connected-extras nil
+  (defconst jmn-connected-extras t
     "Flag of weather to use the purely astetic packages or not on connected system")
 
   (defconst jmn-pureplus-systems '("lat")
@@ -1690,7 +1690,11 @@ Helpful functions
 
   (defun jmn-load-pure-light-theme()
     (with-eval-after-load 'org
-      (set-face-background 'org-block "gray93")))
+      (set-face-background 'org-block "gray93")
+      (setq org-todo-keyword-faces
+            `(("NEXT" . "orange")
+              ("HOLD" . "Black")
+              ("IGNORE" . "gray60")))))
 #+end_src
 
 ** Frame Height
@@ -1700,18 +1704,13 @@ Helpful functions
 #+end_src
 ** Default and time switches
 #+begin_src emacs-lisp
-    (if jmn-pure
-        (if jmn-dark-mode
-            (if (eq system-type 'gnu/linux)  ;; pure dark linux
-                (jmn-load-pure-dark-theme)
-              (progn ;; pure dark windows
-                (print "No dark-mode for windows- setting light mode")
-                (jmn-load-pure-light-theme)))
-          (jmn-load-pure-light-theme))  ;; pure light
-
-      (if jmn-dark-mode  ;; non-pure and dark
-          (jmn-load-gruvbox-dark-hard)
-        (jmn-load-gruvbox-light-medium)))  ;; non-pure and light
+  (if jmn-dark-mode
+      (if (eq system-type 'gnu/linux)
+          (if jmn-pure
+              (jmn-load-pure-dark-theme)  ;; dark, linux, pure
+            (jmn-load-gruvbox-dark-hard))  ;; dark, linux, connected
+        (jmn-load-pure-light-theme))  ;; dark, windows
+    (jmn-load-pure-light-theme))  ;; non-dark
 #+end_src
 
 * Shell Backend and Windows Core Setup
@@ -1889,14 +1888,14 @@ Dash board for initial startup of emacs. [[https://github.com/emacs-dashboard/em
       (setq dashboard-set-file-icons t)
       (setq dashboard-projects-backend 'project-el)
       (dashboard-modify-heading-icons '((recents . "file-text")))
-      (setq dashboard-set-footer nil))
+      (setq dashboard-set-footer nil)))
 
     (defun my-dashboard-hook()
       "Needed to define these after hook for some reason"
       (define-key dashboard-mode-map (kbd "n")  'dashboard-next-line)
       (define-key dashboard-mode-map (kbd "p")  'dashboard-previous-line))
 
-    (add-hook 'dashboard-mode-hook 'my-dashboard-hook))
+    (add-hook 'dashboard-mode-hook 'my-dashboard-hook)
 #+end_src
 * Localwords                                                       :noexport:
 #  LocalWords:  IDE solarized gruvbox vertico Magit Quickhelp Elpy Elisp Neotree Greduan's Localwords Esc  Smartparens UI Helpful's Yasnippet LSP Modeline Dap Flycheck modeline Treemacs backend lsp vterm eshell  Dired dracula clangd ui Grammarly workspaces commenter Pyright CMake Flyspell Pyvenv treemacs shellcheck Linum Proced Hacky GTD
