add archives to agenda files, improve purify command, and others

--- a/emacs.org
+++ b/emacs.org
@@ -523,20 +523,33 @@ Clear up to allow the tab-bar keybindings.
 
 *** remove use-package s-expressions
 #+begin_src emacs-lisp
-  (defun remove-use-package-sexps ()
-      (interactive)
-      (save-excursion
-        (goto-char (point-min))
-        ;; break up the string so it is not replaced here
-        (while (re-search-forward (concat "(" "use-package ") nil t)
-          (backward-sexp)
-          (backward-char)
-          (kill-sexp))))
+   (defun remove-function-sexps (functionName)
+       (save-excursion
+         (goto-char (point-min))
+         ;; break up the string so it is not replaced here
+         (while (re-search-forward (concat "(" functionName) nil t)
+           (backward-sexp)
+           (backward-char)
+           (kill-sexp))))
 
-  (defun remove-use-package-sexps-and-save ()
-    (interactive)
-    (remove-use-package-sexps)
-    (save-buffer))
+  (defun remove-if-var-sexps (varName)
+       (save-excursion
+         (goto-char (point-min))
+         ;; break up the string so it is not replaced here
+         (while (re-search-forward (concat "(if " varName) nil t)
+           (backward-sexp)
+           (backward-sexp)
+           (backward-char)
+           (kill-sexp))))
+
+   (defun purify-my-config-and-save ()
+     (interactive)
+     (find-file "~/.emacs.d/init.el")
+     (remove-function-sexps "use-package")
+     (remove-if-var-sexps "jmn-connected-extras")
+     (set-visited-file-name "~/.emacs.d/pure_init.el")
+     (save-buffer)
+     (kill-current-buffer))
 #+end_src
 * General Development
 ** Indentation
@@ -1022,10 +1035,10 @@ The following keeps the compilation buffer if there are warnings or errors, and 
 ** Markdown
 Use =markdown-preview-mode= to view in browser.
 #+begin_src emacs-lisp
-   (use-package markdown-mode
-     :defer t
-     :hook (markdown-mode-hook . (lambda ()
-                                   (flyspell-mode))))
+  (use-package markdown-mode
+    :defer t
+    :hook ((markdown-mode-hook .  flyspell-mode)
+           (markdown-mode-hook .  visual-line-mode)))
 
   (use-package  markdown-preview-mode
     :defer t)
@@ -1156,9 +1169,10 @@ Use # -*- org-src-preserve-indentation: t; -*- when doing tangle/detangle with p
   (setq org-confirm-babel-evaluate nil)
 
   (with-eval-after-load 'org
-    (require 'org-tempo) ;; needed for <sh to complete
+
     (if (version<= "27" emacs-version)
         (progn
+          (require 'org-tempo) ;; needed for <sh to complete on new systems -- works without on v 26.1
           (add-to-list 'org-structure-template-alist '("la" . "src latex"))
           (add-to-list 'org-structure-template-alist '("m" . "src makefile"))
           (add-to-list 'org-structure-template-alist '("js" . "src js"))
@@ -1287,8 +1301,11 @@ Following the tutorial [[https://emacs.cafe/emacs/orgmode/gtd/2017/06/30/orgmode
   (setq org-todo-keywords '((sequence "TODO(t)" "NEXT(n)" "HOLD(h)" "|"
                                       "DONE(d)" "IGNORE(i)")))
 
-  (require 'find-lisp) ;; may not be needed
-  (setq org-agenda-files (find-lisp-find-files jmn-gtd-directory "\.org$"))
+  (require 'find-lisp) ;; may not be needed"\\.\\(org\\|org_archived\\)$"
+
+  ; use "\.org$" or "\\.\\(org\\|org_archived\\)$" exclude or include archives
+  (setq org-agenda-files (find-lisp-find-files jmn-gtd-directory
+                                                ".*\\.\\(org\\|org_archive\\)$"))               ;; "\\.\\(org\\|org_archive\\)$"))
 
   ;; level/maxlevel = order in hierarchy
   (setq org-refile-targets
