--- a/emacs.org
+++ b/emacs.org
@@ -25,7 +25,7 @@ Hopefully only need to change these to get setup on a new machine.
   (defconst jmn-pureplus-systems '("lat")
     "Systems which use the pure setup with the plus packages")
 
-  (defconst jmn-dark-mode t
+  (defconst jmn-dark-mode nil
     "Do we want Emacs in a dark mode? Note: no dark-mode for windows as of now")
 
   (defconst jmn-font-height-alist '(("xps" . 110)
@@ -669,12 +669,13 @@ Help in sorting the completion results.
 
 ** Treemacs
 #+begin_src emacs-lisp
-    (use-package treemacs
-      :ensure t
-      :defer t
-      :bind (("C-c t" . treemacs ))
-      :config
-      (setq treemacs-width 30))
+  (use-package treemacs
+    :ensure t
+    :defer t
+    :bind (("C-c t" . treemacs ))
+    :config
+    (treemacs-project-follow-mode t) ;; open root of selected file in treemacs
+    (setq treemacs-width 30))
 #+end_src
 
 ** Eglot
@@ -1884,7 +1885,9 @@ Recentf is needed for recent files on the dashboard.
           ;; TAB 2
           (tab-bar-new-tab)
           (tab-bar-rename-tab "workspace")
-          (switch-to-buffer "projects.org")
+          (dired "/home/ape/Programming/projects/RDM/basics")
+          (unless jmn-pure
+            (magit-status))
 
           ;; ;; TAB
           ;; (tab-bar-new-tab)
@@ -1897,7 +1900,7 @@ Recentf is needed for recent files on the dashboard.
           ;;     (tab-bar-rename-tab "vterm")))
           ;; (delete-other-windows)
 
-          ;; TAB 2
+          ;; TAB N
           (tab-bar-new-tab)
           (tab-bar-rename-tab "config")
           (find-file jmn-config-location)
